tests/fixtures/invalid/float_bitxor_float.py
# Cannot bitwise XOR Float and Float
x: float = 1.0 ^ 1.0
